# py-documentation-generator

./: .bandit  .flake8  .mailmap  .pylintrc  README.md  main.py  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: automerge.yml  codeql.yml  linting.yml  test.yml
docs/: LOGGED_MESSAGES.md  MODULES.json  MODULES.md
py-documentation-generator/: main.py
py-documentation-generator/src/commands/: generate_local_modules_listing.py  generate_logged_messages_listing.py
py-documentation-generator/src/generators/: documentation_generator.py  local_module_generator.py  logged_message_generator.py
py-documentation-generator/src/models/: __init__.py  contributor.py  contributor_manager.py  contributors.py  local_modules.py  module_data_provider.py
py-documentation-generator/tests/: conftest.py
py-documentation-generator/tests/commands/: test_generate_mailmap.py
py-documentation-generator/tests/generators/: test_logged_message_generator.py
py-documentation-generator/tests/models/: test_contributor.py  test_contributor_manager.py
src/: generate_mailmap.py
src/commands/: generate_local_modules_listing.py  generate_logged_messages_listing.py  generate_mailmap.py  generate_sequence_diagrams.py
src/generators/: documentation_generator.py  local_module_generator.py
src/models/: __init__.py  contributor_manager.py  local_modules.py  module_data_provider.py
