[tool.poetry]
name = "py-documentation-generator"
version = "0.1.0"
description = "Generating documentation for python projects"
authors = ["thoroc <thomas.a.roche@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
loguru = "^0.7.0"
GitPython = "^3.1.31"
pandas = "^2.0.1"
tabulate = "^0.9.0"
astor = "^0.8.1"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.2"
coverage = "^7.2.5"
coverage-threshold = "^0.4.4"
flake8 = "^6.0.0"
flake8-annotations-complexity = "^0.0.7"
flake8-blind-except = "^0.2.1"
flake8-bugbear = "^23.5.9"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.12.0"
flake8-docstrings = "^1.7.0"
# flake8-eradicate = "^1.2.1"
flake8-expression-complexity = "^0.0.11"
# flake8-isort = "^4.1.1"
flake8-mutable = "^1.2.0"
flake8-plugin-utils = "^1.3.2"
flake8-polyfill = "^1.0.2"
flake8-pytest-style = "^1.7.2"
flake8-spellcheck = "^0.28.0"
flake8-variables-names = "^0.0.5"
pep8-naming = "^0.13.3"
pytest = "^7.3.1"
pytest-bdd = "^6.1.1"
pytest-clarity = "^1.0.1"
pytest-cov = "^4.0.0"
pytest-logger = "^0.5.1"
pytest-mock = "^3.10.0"
Faker = "^18.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
command_line = '-m pytest'
source = ["py-documentation-generator/src"]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
precision = 1

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[coverage-threshold]
line_coverage_min = 85
file_line_coverage_min = 85
branch_coverage_min = 50

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "py-documentation-generator",
]

